# RPG-Game-Void-Quest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  scene file format.md
include/: BattleManager.h  BattleScene.h  Character.h  CharacterManager.h  Enemy.h  FileSceneStore.h  GameManager.h  IOManager.h  NarrativeScene.h  Player.h  Scene.h  SceneManager.h  SceneParser.h  SceneStore.h  SceneVisitor.h  battlescene.h  filescenestore.h  iomanager.h  narrativescene.h  scene.h  scenemanager.h  sceneparser.h  scenestore.h
resources/: GrimGardsLair.md  LICENSE  start.md  village.md
src/: BattleManager.cpp  CMakeLists.txt  Character.cpp  CharacterManager.cpp  Enemy.cpp  FileSceneStore.cpp  GameManager.cpp  IOManager.cpp  NarrativeScene.cpp  Player.cpp  SceneManager.cpp  SceneParser.tpp  filescenestore.cpp  iomanager.cpp  main.cpp  narrativescene.cpp  scenemanager.cpp  sceneparser.tpp  scenestore.cpp
test/: BattleManagerTests.cpp  CMakeLists.txt  CharacterManagerTests.cpp  CharacterTests.cpp  FileSceneStoreTests.cpp  GameManagerTests.cpp  IOManagerTests.cpp  PlayerClassTests.cpp  SceneManagerTests.cpp  SceneParserTests.cpp  dummy.md  iomanagertests.cpp  scenemanagertests.cpp  sceneparsertests.cpp
