add_library(BattleManager BattleManager.cpp)
add_library(IOManager IOManager.cpp)
add_library(GameManager GameManager.cpp)
add_library(Character Character.cpp)
add_library(CharacterManager CharacterManager.cpp)
add_library(Player Player.cpp)
add_library(Enemy Enemy.cpp)

target_link_libraries(GameManager IOManager)
target_link_libraries(Player Character)
target_link_libraries(CharacterManager Character IOManager)
